    breaks the build, since Apache modules refer to symbols that are only
    in httpd, not in any linked library.

 *) Transform -pthread or -pthreads in the Kerberos compiler flags into
    something that apxs can handle.  This is needed for some builds of
    Heimdal.

 *) Added another fix for finding et/com_err.h on Red Hat, this time for
    mod_webauthldap.

WebAuth 3.4.1 (2006-02-06)

 *) Reverted the change in 3.4.0 to not strip WebAuth data from the URLs
    for unprotected URLs, since URLs with protection applied via .htaccess
    files aren't detected early enough in request processing to be
    recognized in the translation hook and look like they're unprotected.

 *) Documented the WebAuthStripURL directive as a partial replacement for
    the problem the reverted change was supposed to solve.  This directive
    has always been supported but it was previously undocumented and not
    guaranteed to remain.

 *) Ported to Heimdal.  The Kerberos implementation dependencies are all
    inside libwebauth, which can now be built with either MIT Kerberos or
    Heimdal.  Mixed environments with some Heimdal-based WebAuth modules
    and some MIT-based modules should work correctly.

 *) Use ldap_initialize and ldap_unbind_ext instead of the deprecated
    ldap_init and ldap_unbind interfaces, since the deprecated interfaces
    have been #ifdef'd out of the header file in OpenLDAP 2.3.

 *) Support et/com_err.h as well as com_err.h for portability to Red Hat
    Enterprise Linux 4 and possibly other newer Red Hat-based Linux
    systems.

 *) Include com_err.h properly in the mod_webauthldap source.

 *) Updated the software dependencies in README.

WebAuth 3.4.0 (2006-01-24)

 *) Added support to the weblogin server and WebKDC module to trust an
    authentication identity asserted by Apache.  This allows use of any
    authentication type that Apache supports as WebAuth authentication, in
    particular SPNEGO/GSSAPI.
