@@ -5,8 +5,8 @@ dnl Defines the macro WEBAUTH_APACHE, which allows the user to specify the
 dnl root of the Apache installation and defines the output variable APXS to
 dnl point to the full path to apxs.  Also sets the APACHE_ROOT output variable
 dnl to the root of the Apache installation.  If the --with-apache option isn't
-dnl given, apxs is searched for on the user's path (unless --with-apxs is
-dnl given) and /usr/local/apache2 is used as the Apache root.
+dnl given, apxs2 and apxs is searched for on the user's path (unless
+dnl --with-apxs is given) and /usr/local/apache2 is used as the Apache root.
 
 AC_DEFUN([WEBAUTH_APACHE],
 [APACHE_ROOT=/usr/local/apache2
@@ -21,7 +21,7 @@ AC_ARG_WITH([apxs],
         APXS=$withval
         AC_SUBST(APXS)
      else
-        AC_PATH_PROG([APXS], [apxs], [apxs], [$APACHE_ROOT/bin:$PATH])
+        AC_PATH_PROGS([APXS], [apxs2 apxs], [apxs], [$APACHE_ROOT/bin:$PATH])
      fi],
-     [ AC_PATH_PROG([APXS], [apxs], [apxs], [$APACHE_ROOT/bin:$PATH])])
+    [AC_PATH_PROG([APXS], [apxs2 apxs], [apxs], [$APACHE_ROOT/bin:$PATH])])
 AC_SUBST(APACHE_ROOT)])
