@@ -13,6 +13,11 @@ WebAuth 3.4.2 (unreleased)
  *) Added another fix for finding et/com_err.h on Red Hat, this time for
     mod_webauthldap.
 
+ *) Search for apxs2 in the path before apxs.  WebAuth requires Apache
+    2.x, so if apxs2 is available, it's more likely the right thing to use
+    than apxs.  This change allows the WebAuth build to find apxs properly
+    on Debian without extra configure flags.
+
 WebAuth 3.4.1 (2006-02-06)
 
  *) Reverted the change in 3.4.0 to not strip WebAuth data from the URLs
